started to debug after the major refactoring